# video_decoder

./: CMakeLists.txt
include/: error_code.h  event.h  frame.h  packet.h  type_define.h  video_capture.h
include/ffmpeg/: ffmpeg_video_decoder.h  ffmpeg_video_reader.h
include/interface/: base_video_decoder.h  base_video_reader.h
include/utility/: singleton.hpp
src/: video_capture.cpp
src/ffmpeg/: ffmpeg_video_decoder.cpp  ffmpeg_video_reader.cpp
src/interface/: base_video_decoder.cpp  base_video_reader.cpp
test/: CMakeLists.txt  demo.cpp
